--- a/.classpath
+++ b/.classpath
@@ -8,6 +8,6 @@
 	<classpathentry kind="lib" path="src/libs/commons-fileupload-1.2.2.jar"/>
 	<classpathentry kind="lib" path="src/libs/commons-io-1.3.2.jar"/>
 	<classpathentry kind="lib" path="src/libs/gwt-maps.jar"/>
-	<classpathentry kind="lib" path="/Users/miguelcharcosllorens/workspace/mcharcos-owb/owb/src/libs/tomcat-5.5-servlet-api.jar"/>
+	<classpathentry kind="lib" path="src/libs/tomcat-5.5-servlet-api.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
