--- a/.settings/com.google.appengine.eclipse.core.prefs
+++ b/.settings/com.google.appengine.eclipse.core.prefs
@@ -2,5 +2,5 @@
 <<<<<<<=HEAD
 >>>>>>>=2d31f9d4d867559292658d577faad697244c666f
 eclipse.preferences.version=1
-filesCopiedToWebInfLib=appengine-api-1.0-sdk-1.8.4.jar|appengine-api-labs.jar|appengine-endpoints.jar|appengine-jsr107cache-1.8.4.jar|datanucleus-appengine-1.0.10.final.jar|datanucleus-core-1.1.5.jar|datanucleus-jpa-1.1.5.jar|geronimo-jpa_3.0_spec-1.1.1.jar|geronimo-jta_1.1_spec-1.1.1.jar|jdo2-api-2.3-eb.jar|jsr107cache-1.1.jar
+filesCopiedToWebInfLib=appengine-api-labs.jar|appengine-endpoints.jar|appengine-jsr107cache-1.7.2.1.jar|jsr107cache-1.1.jar|appengine-api-1.0-sdk-1.7.2.1.jar|datanucleus-appengine-1.0.10.final.jar|datanucleus-core-1.1.5.jar|datanucleus-jpa-1.1.5.jar|geronimo-jpa_3.0_spec-1.1.1.jar|geronimo-jta_1.1_spec-1.1.1.jar|jdo2-api-2.3-eb.jar
 gaeDeployDialogSettings=
